--- a/Hello.Cake/Hello.Cake.csproj
+++ b/Hello.Cake/Hello.Cake.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Company>MyCompany</Company>
+    <Product>MyProduct</Product>
+    <Description>Description</Description>
+    <Copyright>Copyright</Copyright>
   </PropertyGroup>
 
 </Project>
